--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -318,7 +318,7 @@
             <hr>
         </div>
 
-        <label>Poll interval in seconds.\nRecommended - Min:10 Max:3600</label>
+        <label>Poll interval in seconds.<br>Recommended - Min:10 Max:3600</label>
         <input placeholder="Enter check interval in seconds" type="text" id="intervalField"
                value="30">
         <hr>
